Fix input-field with better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,8 @@ span i {
     width: 70%;
     height: 40px;
     border-radius: 10px;
-    background-color: #3A001EBB;
-    color: #FFDBEE;
+    background-color: #FFDBEEBB;
+    color: #3A001E;
     font-size: 28px;
     font-family: monospace;
     padding: 5px 10px;
